--- a/templates/dbd.html
+++ b/templates/dbd.html
@@ -2,15 +2,18 @@
 <html>
  <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <title>Отправка файла на сервер</title>
  </head>
  <body>
-  <form enctype="multipart/form-data" method="POST" action="/upload">
-   <p>Загрузите ваше фото</p>
-   <p>
-   	<input type="file" name="inputfile">
-   	<input type="submit"/>
-   </p>
+  <form enctype="multipart/form-data" method="POST" action="/template/upload">
+   <div class="container">
+     <h5>Загрузите ваше фото</h5>
+     <p>
+     	<input type="file" name="inputfile" class="waves-effect waves-light btn-small" >
+     	<input type="submit" class="waves-effect waves-light btn-small">
+     </p>
+   </div>
   </form> 
  </body>
 </html>
